# rs_server_template

./: .env  Cargo.toml
server/: Cargo.toml
server/src/: main.rs
